# battleship-in-c

./: .gitignore  Makefile  README.md  array_util.c  battleships_comp_player.h  battleships_game.c  battleships_player.c  battleships_ship.c  battleships_ui.c  battleships_ui.h  scoreboard.h  sort.h  util.c  window.c
dev/: main.c
dev/battleship/: CMakeLists.txt
dev/battleship/include/battleship/: commondefs.h  comp_player.h  coord.h  form.h  form_curses.h  game.h  grid.h  input.h  line.h  menu.h  menu_curses.h  menu_stdio.h  player.h  scoreboard.h  ship.h  ui.h  util.h  window.h
dev/battleship/src/: ai.c  coord.c  form_curses.c  form_stdio.c  game.c  grid.c  input.c  menu.c  menu_curses.c  menu_stdio.c  player.c  rng.c  scoreboard.c  ship.c  ui.c  ui_curses.c  ui_stdio.c  util.c  window.c
dev/battleship/src/linux/: window.c
dev/battleship/src/win32/: window.c
dev/pdcurses/: CMakeLists.txt
doc/: battleship.txt
root/: BattleShipConfig.h  BattleShipConfig.h.in  CMakeLists.txt  main.c
root/battleship/: CMakeLists.txt  coord.c  game.h  scoreboard.c  ship.h  ui.h  util.c  window.c  window.h
root/battleship/include/battleship/: commondefs.h  coord.h  game.h  grid.h  input.h  menu.h  player.h  rng.h  scoreboard.h  ship.h  ui.h  util.h
root/battleship/src/: coord.c  game.c  grid.c  input.c  menu.c  player.c  scoreboard.c  ship.c  ui.c  ui_stdio.c  util.c  window.c
src/: CMakeLists.txt  battleships_game.h  battleships_player.h  battleships_ship.h  battleships_ui.c  convert.h  main.c  menu.c  menu.h  rng.h  util.h
src/battleship/: CMakeLists.txt  commondefs.h  comp_player.h  coord.c  coord.h  game.c  game.h  grid.c  grid.h  input.c  input.h  menu.c  menu.h  player.c  player.h  rng.c  rng.h  scoreboard.c  scoreboard.h  ship.c  ship.h  ui.c  ui.h  util.c  util.h
src/battleship/.todo/: array_util.h
src/conio21/: CMakeLists.txt
